syntax = "proto3";

package protogen;
option go_package="protogen/";

import "service/app_service.proto";
import "jobs/job_service.proto";

message AppServices {
    services.AppsService app = 1;
}

message JobServices {
    jobs.JobService job =1;
}