syntax = "proto3";

package proto_basic;
option go_package="gen/";

enum Gender{
    Gender_UNDEFINED = 0;
    Gender_MALE = 1;
    Gender_FEMALE = 2;
}


message User{
    uint32 id = 1;
    string username = 2;
    bool is_active = 3 [json_name = "is_active"];
    bytes password = 4;
    repeated string emails = 5;
    Gender gender = 6;
}