syntax = "proto3";

package protogen;
option go_package="protogen/";


import "user.proto";

message UserGroup {
    uint32 group_id = 1 [json_name="group_id"];
    string group_name = 2 [json_name="group_name"];
    repeated string roles = 3;
    User user = 4;
    string description = 16;
}